# Unitree_Gazebo_Test

./: .gitignore  README.md
models/: Actor_Deploy.pt  policy.onnx  walk.pt
src/: README.md
src/ICRA2024_QRC_Simulation_Map/meshes/visual/: stairs16cm.mtl  terrain.mtl
src/ICRA2024_QRC_Simulation_Map/urdf/: map_cit.urdf  map_flat.urdf  map_sloped.urdf
src/realsense_ros_gazebo/include/realsense_gazebo_plugin/: RealSensePlugin.h
src/realsense_ros_gazebo/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
src/realsense_ros_gazebo/xacro/: depthcam.xacro
src/robots/go1_description/xacro/: robot.xacro
src/unitree_controller/: CMakeLists.txt  package.xml
src/unitree_controller/include/: body.h
src/unitree_controller/launch/: set_ctrl.launch
src/unitree_controller/lib/onnx/: GIT_COMMIT_ID
src/unitree_controller/lib/onnx/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake  onnxruntimeTargets.cmake
src/unitree_controller/lib/onnx/lib/pkgconfig/: libonnxruntime.pc
src/unitree_controller/scripts/: vision.py
src/unitree_controller/src/: body.cpp  keyboard.cpp  servo.cpp
src/unitree_gazebo/launch/: normal.launch
src/unitree_gazebo/worlds/: competition.world  stairs.world
